infra/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: nml
spec:
  selector:
    matchLabels:
      app: nginx-app
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx-app-container
        image: yazhivotnoe/jnt:page
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
          name: nginx-port
      restartPolicy: Always
