infra/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-ingress-service
spec:
  selector:
    app: nginx-app
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080 
    targetPort: 8080
