infra/ingress-controller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  tls:
  - hosts:
    - domen.com
    secretName: api-tls
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-ingress-service
            port:
              number: 8080
